# sql-batcher

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  fix.sh  format_code.sh  get-pip.py  mypy.ini  pr_description.md  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt  run_ci_tests.py  run_core_tests.py.bak  run_full_tests.py  run_tests.py.bak  setup-hooks.sh  setup.cfg  setup.py  test-results.xml
.git-hooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  python-ci.yml
benchmarks/: async_vs_sync_benchmark.py
config/: .flake8  README.md
docs/: adapters.md  async.md  column_aware_batching_memory.md  conf.py  context_manager.md  index.rst
docs/api/: batcher.rst
examples/: async_usage.py  async_vs_sync_sqlite.py  basic_usage.py  dry_run_example.py  insert_merging_example.py  insert_merging_simple_pg_example.py  insert_merging_stats_sqlite.py  plugin_usage.py  postgresql_example.py  query_collector_sqlite.py  simple_sqlite_example.py  sqlite_demo.py
scripts/: README.md  fix_flake8.py  run_ci_tests.py  run_full_tests.py  run_sqlbatcher_tests.sh
sql-batcher-context-docx/: feature_and_refactoring_roadmap.txt  file_structure_proposal.txt  roadmap_and_refactor_plan.docx  summary_of_purpose_and_capabilities.docx  summary_of_purpose_and_capabilities.txt  ~$admap_and_refactor_plan.docx  ~$mmary_of_purpose_and_capabilities.docx
src/sql_batcher/: __init__.py  async_batcher.py  batch_manager.py  batcher.py  exceptions.py  hook_manager.py  insert_merger.py  plugins.py  query_collector.py  retry.py  retry_manager.py
src/sql_batcher/adapters/: __init__.py  async_base.py  async_bigquery.py  async_postgresql.py  async_snowflake.py  async_trino.py  base.py  bigquery.py  generic.py  interfaces.py  postgresql.py  snowflake.py  spark.py  trino.py
src/sql_batcher/collectors/: __init__.py  query_collector.py
src/sql_batcher/hooks/: __init__.py  plugins.py
src/sql_batcher/utils/: __init__.py  insert_merger.py  query_collector.py
tests/: __init__.py  conftest.py  test_adapters.py  test_adapters.py.bak  test_async_adapters.py  test_async_batcher.py  test_async_batcher_context.py  test_async_insert_merging.py  test_async_integration.py  test_async_postgresql_adapter_fixed.py  test_async_postgresql_adapter_mock.py  test_async_postgresql_adapter_simple.py  test_async_postgresql_adapter_simple_mock.py  test_batch_manager.py  test_batcher.py  test_batcher_coverage.py  test_bigquery_adapter.py  test_exceptions.py  test_hook_manager.py  test_insert_merger.py  test_insert_merging_config.py  test_plugins.py  test_postgresql_adapter.py  test_postgresql_adapter.py.bak  test_postgresql_adapter_fixed.py  test_postgresql_adapter_mock.py  test_query_collector.py  test_query_collector_coverage.py  test_retry.py  test_retry_coverage.py  test_retry_manager.py  test_sql_batcher_insert_merging.py  test_sql_batcher_insert_merging.py.bak  test_trino_adapter.py  test_trino_adapter_fixed.py  test_trino_adapter_mock.py
tests/collectors/: __init__.py  test_query_collector.py
tests/utils/: __init__.py  test_insert_merger.py
tests_old/: conftest.py.bak  test_async_adapters.py  test_async_batcher.py  test_async_batcher_context.py  test_async_integration.py  test_batch_manager.py  test_batcher.py  test_bigquery_adapter.py  test_bigquery_adapter.py.bak  test_hook_manager.py  test_insert_merger.py.bak  test_plugins.py  test_postgresql_adapter.py.bak  test_query_collector.py  test_sql_batcher_insert_merging.py  test_trino_adapter.py.bak
tests_old/utils/: test_insert_merger.py  test_query_collector.py
