[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-batcher"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "hypothesis",
]
postgresql = [
    "psycopg2-binary",
    "asyncpg",
]
snowflake = [
    "snowflake-connector-python",
]
trino = [
    "trino",
]
bigquery = [
    "google-cloud-bigquery",
]

[project.urls]
Homepage = "https://github.com/example/project"
Issues = "https://github.com/example/project/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/sql_batcher --cov-report=term --cov-report=html:coverage_html"
markers = [
    "core: mark test as a core test",
    "integration: mark test as an integration test",
]

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 130